--- a/package.json
+++ b/package.json
@@ -192,9 +192,11 @@
     "classnames": "2.2.6",
     "electron-debug": "3.0.1",
     "electron-updater": "4.1.2",
+    "eslint-utils": "1.4.2",
     "font-awesome": "4.7.0",
     "handsontable": "6.2.2",
     "history": "4.9.0",
+    "lodash-es": "4.17.15",
     "moment": "2.24.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
